[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "pwiki"
version = "1.3.1"
dependencies = ["requests"]
requires-python = ">=3.9"
authors = [{name = "Fastily", email = "fastily@users.noreply.github.com"}]
description = "A Python library for effortlessly interacting with Wikipedia/MediaWiki"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E.*"]
keywords = ["wikipedia", "mediawiki"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[dependency-groups]
dev = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[project.urls]
Homepage = "https://github.com/fastily/pwiki"
"Bug Tracker" = "https://github.com/fastily/pwiki/issues"

[tool.uv.build-backend]
module-name = "pwiki"
module-root = ""